[gd_scene load_steps=4 format=3 uid="uid://cmkdd8vejyrav"]

[ext_resource type="Script" path="res://scenes/main_menu/options/options_menu.gd" id="1_0cimc"]
[ext_resource type="AudioStream" uid="uid://u2l022b2b2xw" path="res://assets/sfx/UI hover.wav" id="2_6iup4"]
[ext_resource type="AudioStream" uid="uid://ccegocsb16ymg" path="res://assets/sfx/UI press.wav" id="3_p6a0d"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cimc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HeaderText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"
horizontal_alignment = 1

[node name="SplitContainer" type="SplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
dragger_visibility = 1

[node name="VideoSettingsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VideoSettingsTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/VideoSettingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Video
"
horizontal_alignment = 1

[node name="MouseLockCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/VideoSettingsContainer"]
layout_mode = 2
tooltip_text = "Determines whether the mouse can go outside of the game screen."
text = "Mouse Lock"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="AudioSettingsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioSettingsTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Audio
"
horizontal_alignment = 1

[node name="MarginContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer"]
layout_mode = 2

[node name="MasterSliderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Master
"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="MarginContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MusicSliderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Music"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 7
max_value = 1.0
step = 0.05

[node name="MarginContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer"]
layout_mode = 2

[node name="SFXSliderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 7
max_value = 1.0
step = 0.05

[node name="Footer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="HoverUISFX2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6iup4")
volume_db = -20.0
bus = &"SFX"

[node name="PressUISFX2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p6a0d")
volume_db = -20.0
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/VideoSettingsContainer/MouseLockCheckBox" to="." method="_on_check_box_pressed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/SplitContainer/MarginContainer/AudioSettingsContainer/MarginContainer3/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/Footer/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Footer/BackButton" to="." method="_on_back_button_pressed"]
